--- a/src/Case.css
+++ b/src/Case.css
@@ -17,7 +17,7 @@
   height: 40px;
   width: 2px;
   margin-left: 35px;
-  background-color: #000;
+  /*background-color: #000;*/
   transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   /* IE 9 */
@@ -28,7 +28,7 @@
 .close-button .lr .rl {
   height: 40px;
   width: 2px;
-  background-color: #000;
+  /*background-color: #000;*/
   transform: rotate(90deg);
   -ms-transform: rotate(90deg);
   /* IE 9 */
