--- a/src/Home.css
+++ b/src/Home.css
@@ -1,58 +1,44 @@
 .wrapper {
-	padding: 8% 10% 0 10%;
+	padding: 8%;
 }
 
 #hello {
-	font-family: 'Lato', sans-serif;
-    font-size: 30px;
-    font-weight: 300;
-    letter-spacing: 1px;
-    line-height: 42px;
-	color: #838383;
-	height: 60vh;
-	display: flex;
-	flex-direction: column;
-	align-items: left;
-	justify-content: center;
+	font-family: 'Poppins', sans-serif;
+    font-size: 80px;
+    font-weight: 600;
+    letter-spacing: -2px;
+    line-height: 90px;
+	color: #000;
+	margin-top:5%;
+    animation: fadeInAnimation ease .8s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
 }
 
-#work {
-	margin-bottom: 0px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 40px;
-    grid-row-gap: 40px;
-}
-
-@media (max-width: 767px) {
-	#work {
-	    grid-template-columns: 1fr;
-	}
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+        transform: translateY(50px);
+        -webkit-transform: translateY(50px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
+        -webkit-transform: translateY(0px);
+     }
 }
 
 #contact {
-	text-align: center;
-	padding: 30px 0;
-    font-size: 12px;
-    color: #838383;
+    text-decoration: none;
 }
 
-#contact > a {
-	padding: 30px 0;
-    font-size: 12px;
-    color: #838383;
+
+@media (max-width: 767px) {
+    #hello {
+    font-size: 30px;
+    line-height: 40px;
+    margin-top:5%;
+    }       
 }
 
-.signOff {
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    padding: 18% 10%;
-	font-size: 20px;
-	font-weight: 300;
-	letter-spacing: 1px;
-    line-height: 30px;
-    font-family: "Lato", sans-serif;
-    text-align: center;
-    color: #838383;
-}
+
